--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,9 @@
 [metadata]
 description-file = README.rst
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = ineqpy/_version.py
+versionfile_build = ineqpy/_version.py
+tag_prefix = ineqpy-
