--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,29 @@
-pandas
-numpy
-scipy
-numba
+alabaster==0.7.12
+appdirs==1.4.3
+atomicwrites==1.2.1
+attrs==18.2.0
+Babel==2.6.0
+Click==7.0
+cycler==0.10.0
+flake8==3.6.0
+idna==2.8
+kiwisolver==1.0.1
+llvmlite==0.27.0
+MarkupSafe==1.1.0
+matplotlib==3.0.2
+numba==0.42.0
+numpy==1.16.0
+packaging==19.0
+pandas==0.24.0
+pluggy==0.8.1
+py==1.7.0
+pyflakes==2.0.0
+Pygments==2.3.1
+pyparsing==2.3.1
+python-dateutil==2.7.5
+pytz==2018.9
+requests==2.21.0
+six==1.12.0
+snowballstemmer==1.2.1
+toml==0.10.0
+urllib3==1.24.1
