--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pyparsing==2.3.1
 python-dateutil==2.7.5
 pytz==2018.9
 requests==2.21.0
+scipy==1.2.0
 six==1.12.0
 snowballstemmer==1.2.1
 toml==0.10.0
