--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
   - "3.5"
   - "3.6"
   - "3.6-dev" # 3.6 development branch
+  - "3.7" 
 # command to install dependencies
-install: "pip install . -r requirements.txt"
+install: "pip install . -r dev-requirements.txt"
 # command to run tests
 script: pytest
