--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,43 +1,4 @@
-alabaster==0.7.12
-appdirs==1.4.3
-atomicwrites==1.2.1
-attrs==18.2.0
-Babel==2.6.0
-certifi==2018.11.29
-chardet==3.0.4
-Click==7.0
-cycler==0.10.0
-docutils==0.14
-flake8==3.6.0
-idna==2.8
-imagesize==1.1.0
-Jinja2==2.10
-kiwisolver==1.0.1
-llvmlite==0.27.0
-MarkupSafe==1.1.0
-matplotlib==3.0.2
-mccabe==0.6.1
-more-itertools==5.0.0
-numba==0.42.0
-numpy==1.16.0
-numpydoc==0.8.0
-packaging==19.0
-pandas==0.24.0
-pluggy==0.8.1
-powerline-status==2.6
-py==1.7.0
-pycodestyle==2.4.0
-pyflakes==2.0.0
-Pygments==2.3.1
-pyparsing==2.3.1
-pytest
-python-dateutil==2.7.5
-pytz==2018.9
-requests==2.21.0
-scipy==1.2.0
-six==1.12.0
-snowballstemmer==1.2.1
-Sphinx
-sphinxcontrib-websupport==1.1.0
-toml==0.10.0
-urllib3==1.24.2
+black
+flake8
+python-language-server[all]
+pdbpp
