--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,12 @@ language: python
 python:
   - "3.5"
   - "3.6"
-  - "3.6-dev" # 3.6 development branch
-  # - "3.7"  
+  - "3.7"
+  - "3.8"
 # command to install dependencies
-install: "pip install . -r dev-requirements.txt"
+install:
+  - "pip install -r requirements.txt"
+  - "pip install -r requirements-test.txt"
+  - "pip install ."
 # command to run tests
 script: pytest
