--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ python:
   - "3.6"
   - "3.7"
   - "3.8"
+  - "3.9"
 # command to install dependencies
 install:
-  - "pip install -r requirements.txt"
-  - "pip install -r requirements-test.txt"
-  - "pip install ."
+  - "make venv"
 # command to run tests
-script: pytest
+script:
+  - "make test"
