--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,6 +22,6 @@ jobs:
     - name: Install dependencies
       run: make venv
     - name: Lint with flake8
-      run: pipenv run flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
+      run: make lint
     - name: Test with pytest
-      run: pipenv run pytest
+      run: make test
