cicd: add build process

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,6 @@ description-file = README.rst
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = ineqpy/_version.py
+versionfile_source = src/ineqpy/_version.py
 versionfile_build = ineqpy/_version.py
 tag_prefix = ineqpy-
