--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,3 +25,22 @@ jobs:
       run: make lint
     - name: Test with pytest
       run: make test
+  dist:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup venv
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+      uses: actions/setup-python@v2
+      with:
+        python-version: "3.9"
+      run: make venv
+    - name: Build package
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+      run: make build
+    - name: Publish package
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
