--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,7 +34,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.9"
-      run: make venv
+    - run: make venv
     - name: Build package
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
       run: make build
