--- a/.github/workflows/pypi_wheel.yml
+++ b/.github/workflows/pypi_wheel.yml
@@ -26,10 +26,10 @@ jobs:
       uses: RalfG/python-wheels-manylinux-build@v0.3.1-manylinux2010_x86_64
       with:
         python-versions: 'cp36-cp36m cp37-cp37m'
-        build-requirements: 'cython numpy'
+        build-requirements: 'numpy'
     - name: Publish wheels to PyPI
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        twine upload dist/*-manylinux*.whl
+        twine upload dist/*.whl
