--- a/.github/workflows/pypi_wheel.yml
+++ b/.github/workflows/pypi_wheel.yml
@@ -30,6 +30,6 @@ jobs:
     - name: Publish wheels to PyPI
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
         twine upload dist/*.whl
