--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -7,12 +7,12 @@ on:
     branches: [ master ]
 
 jobs:
+
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9"]
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -25,21 +25,22 @@ jobs:
       run: make lint
     - name: Test with pytest
       run: make test
+
   dist:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Setup venv
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+      if: github.event_name == 'release' && github.event.action == 'created'
       uses: actions/setup-python@v2
       with:
         python-version: "3.9"
     - run: make venv
     - name: Build package
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+      if: github.event_name == 'release' && github.event.action == 'created'
       run: make build
     - name: Publish package
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+      if: github.event_name == 'release' && github.event.action == 'created'
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
