--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,11 +17,11 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: 3.8
+    - name: Build documentation
       run: |
         make venv
         make dev
-    - name: Build documentation
-      run: make pages
+        make pages
     - name: Deploy documentation
       if: ${{ github.event_name == 'push' }}
       uses: JamesIves/github-pages-deploy-action@4.1.4
