--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,8 +21,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Create env
       run: make venv
+    - name: Install dependencies
+      run: make dev
     - name: Lint with flake8
       run: make lint
     - name: Test with pytest
@@ -38,7 +40,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.9"
+    - name: Create env
     - run: make venv
+    - name: Install dependencies
+      run: make install
     - name: Build package
       if: github.event_name == 'release' && github.event.action == 'created'
       run: make build
