--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,12 +1,9 @@
-name: Python package
-
+name: Upload Python Package
 on:
   release:
-    types: [created]
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    types: [published]
+permissions:
+  contents: read
 
 jobs:
 
@@ -36,21 +33,22 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Setup venv
-      if: github.event_name == 'release' && github.event.action == 'created'
+      # if: github.event_name == 'release' && github.event.action == 'created'
       uses: actions/setup-python@v4
       with:
-        python-version: "3.9"
+        python-version: '3.x'
     - name: Create env
       run: make venv
     - name: Install dependencies
       run: make install
     - name: Build package
-      if: github.event_name == 'release' && github.event.action == 'created'
+      # if: github.event_name == 'release' && github.event.action == 'created'
       run: make build
     - name: Publish package
-      if: github.event_name == 'release' && github.event.action == 'created'
+      # if: github.event_name == 'release' && github.event.action == 'created'
       # uses: pypa/gh-action-pypi-publish@release/v1
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
+
