--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,7 +36,7 @@ jobs:
       # if: github.event_name == 'release' && github.event.action == 'created'
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'
+        python-version: '3.8'
     - name: Create env
       run: make venv
     - name: Install dependencies
